--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pandas==1.5.0
 sentence-transformers==2.2.2
 sentencepiece==0.1.97
 sklearn==0.0
+scikit-learn==1.1.2
 spacy==3.3.1
 streamlit-aggrid==0.3.3
 streamlit-modal==0.0.5
