--- a/environment.yml
+++ b/environment.yml
@@ -4,16 +4,26 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - cudatoolkit=11.3.1
-  - numpy=1.21.5
-  - pip=21.3.1
-  - python=3.8.13
-  - pytorch=1.11.0
+  - cudatoolkit=11.6.0
+  - numpy-base=1.23.1
+  - pip=22.2.2
+  - python=3.10.6
+  - pytorch=1.12.1
+  - torchaudio=0.12.1
+  - torchvision=0.13.1
   - pip:
-      - streamlit==1.13.0
-      - streamlit-aggrid==0.3.3
-      - mypy==0.812
-      - nltk>=3.3
-      - pytest==6.2.5
-      - tokenizers==0.12.1
-      - transformers==4.19.4
+    - huggingface-hub==0.10.0
+    - nltk==3.7
+    - numpy==1.23.3
+    - pandas==1.5.0
+    - scikit-learn==1.1.2
+    - scipy==1.9.2
+    - sentence-transformers==2.2.2
+    - sentencepiece==0.1.97
+    - streamlit==1.13.0
+    - streamlit-aggrid==0.3.3
+    - tokenizers==0.12.1
+    - toml==0.10.2
+    - toolz==0.12.0
+    - tqdm==4.64.1
+    - transformers==4.22.2
