--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - pip:
+    - en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
     - huggingface-hub==0.10.0
     - nltk==3.7
     - numpy==1.23.3
@@ -19,6 +20,7 @@ dependencies:
     - scikit-learn==1.1.2
     - scipy==1.9.2
     - sentence-transformers==2.2.2
+    - spacy==3.2.0
     - sentencepiece==0.1.97
     - streamlit==1.13.0
     - streamlit-aggrid==0.3.3
